--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ contextlib2==0.6.0
 distlib==0.3.0
 distro==1.4.0
 Django==3.1.5
+django-crispy-forms==1.11.0
 html5lib==1.0.1
 idna==2.8
 ipaddr==2.2.0
@@ -17,6 +18,7 @@ packaging==20.3
 pep517==0.8.2
 Pillow==8.1.0
 progress==1.5
+psycopg2-binary==2.8.6
 pyparsing==2.4.6
 pytoml==0.1.21
 pytz==2020.5
