--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@ venv/
 *.odt#
 env_vars.sh
 *.sh
+__pycache__/
+*/__pycache__/
+*/*/__pycache__/
+*/*/*/__pycache__/
+*/*/*/*/__pycache__/
+*/*/*/*/*/__pycache__/
+*/*/*/*/*/*/__pycache__/
